# terac

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/atoms/: AuthStateAtom.ts  DrawerStateAtom.ts  InitializeStateAtom.ts
frontend/src/components/: AppDrawer.tsx  Home.tsx
frontend/src/components/auth/: Initializer.tsx
frontend/src/types/: AuthStateType.ts  DrawerStateType.ts  InitializeStateType.ts
src/: main.rs
src/handlers/: app_handler.rs  auth_handler.rs  hello_handler.rs  home_handler.rs  message_handler.rs  mod.rs  user_handler.rs
src/middlewares/: app_auth.rs  mod.rs
src/models/: course.rs  message.rs  mod.rs  result.rs  session.rs  user.rs
src/services/: app_openid_client.rs  mod.rs
src/utils/: generate_session_id_string.rs  mod.rs
templates/: app.html  home.html  login.html
